@startuml
class Users {
    +id: Integer
    +username: String
    +email: String
    +password_hash: Text
    +created_at: TIMESTAMP
}

class SearchHistory {
    +id: Integer
    +user_id: Integer
    +search_query: Text
    +search_results: JSON
    +created_at: TIMESTAMP
}

class UserToken {
    +id: Integer
    +user_id: Integer
    +token: Text
    +created_at: TIMESTAMP
    +expires_at: TIMESTAMP
}

class Bookmark {
    +id: Integer
    +user_id: Integer
    +media_id: Text
    +media_url: Text
    +media_type: Text
    +created_at: TIMESTAMP
}

Users "1" -- "*" SearchHistory : has
Users "1" -- "*" UserToken : has
Users "1" -- "*" Bookmark : has
@enduml